bug 97580 back out the original patch for this bug, since it's not necessary anymore and breaks plugins patch by chpe@gnome.org r=blizzard sr=roc